--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,28 +19,33 @@
         <activity
             android:name=".PlayActivity"
             android:label="play"
-            android:parentActivityName=".HomeActivity"/>
+            android:parentActivityName=".HomeActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".HistoryActivity"
             android:label="@string/history"
-            android:parentActivityName=".HomeActivity"/>
+            android:parentActivityName=".HomeActivity" />
 
         <provider
             android:name=".data.TableProvider"
             android:authorities="com.swipeacademy.multiplicationtableswipe"
             android:exported="false" />
 
-        <activity android:name=".PracticeActivity"
+        <activity
+            android:name=".PracticeActivity"
             android:label="practice"
-            android:parentActivityName=".HomeActivity"/>
+            android:parentActivityName=".HomeActivity"
+            android:screenOrientation="portrait"/>
         <!--Widget-->
-        <receiver android:name=".WidgetProvider"
+        <receiver
+            android:name=".WidgetProvider"
             android:label="Recent Play Results">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.example.android.sunshine.app.ACTION_RECENT_RESULTS_UPDATED" />
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
+            <meta-data
+                android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
         <service android:name=".WidgetIntentService" />
