--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.diogobernardino:williamchart:2.5.0'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.serhatsurguvec.libraries:continuablecirclecountdownview:1.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
